some more seo optimization

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth United</title>
     <meta name="description" content="A bold international youth media platform dedicated to uniting young voices in the fight against oppression and injustice all around the world.">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="youth united, youth, media, news, youth media, media for youth, media for young, media for young, news for young">
+    <link rel="canonical" href="http://www.youthunited.eu">
 
     <link rel="icon" href="/images/logo.jpg">
     
@@ -27,7 +30,7 @@
     </nav>
     <div class="logo">
         <a href="#">
-            <img src="/images/logo.jpg" alt="">
+            <img src="/images/logo.jpg" alt="Youth United Logo">
         </a>
     </div>
     <div id="home">
@@ -145,7 +148,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/katya.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/katya.png" alt="Katya">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Marketing Manager</div>
                                     <div class="responsive-3">Katya <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
@@ -156,7 +159,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/alice.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/alice.png" alt="Alice">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Designer</div>
                                     <div class="responsive-3">Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
@@ -169,7 +172,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/oliver.JPG" alt="">
+                                <img class="member-body profile-pic" src="/images/people/oliver.JPG" alt="Oliver">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Web Developer</div>
                                     <div class="responsive-3">Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
@@ -180,7 +183,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/kristof.JPG" alt="">
+                                <img class="member-body profile-pic" src="/images/people/kristof.JPG" alt="Kristof">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">IT Consultant</div>
                                     <div class="responsive-3">Kristóf <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/1200px-Flag_of_Hungary.svg.png" alt=""></div>
@@ -194,7 +197,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/catalin.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/catalin.png" alt="Catalin">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Editor-In-Chief</div>
                                     <div class="responsive-3">Cătălin <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/2560px-Flag_of_Belgium_%28civil%29.svg.png" alt=""></div>
@@ -205,7 +208,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/dan.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/dan.png" alt="Dan">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Dan <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
@@ -218,7 +221,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/regina.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/regina.png" alt="Regina">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Regina <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></div>
@@ -229,7 +232,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/lia.jpg" alt="">
+                                <img class="member-body profile-pic" src="/images/people/lia.jpg" alt="Lia">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Lia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
@@ -242,7 +245,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/sonya.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/sonya.png" alt="Sonya">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Sonya <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1024px-Flag_of_the_United_Kingdom.svg.png" alt=""></div>
@@ -253,7 +256,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/zlata.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/zlata.png" alt="Zlata">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Zlata <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
@@ -266,7 +269,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/riri.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/riri.png" alt="Riri">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Riri <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" alt=""></div>
@@ -277,7 +280,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/teo.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/teo.png" alt="Teo">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Teo <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/1200px-Flag_of_Romania.svg.png" alt=""></div>
@@ -291,7 +294,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/tyoma.JPG" alt="">
+                                <img class="member-body profile-pic" src="/images/people/tyoma.JPG" alt="Tyoma">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Business Manager</div>
                                     <div class="responsive-3">Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></div>
@@ -302,7 +305,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/ilia.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/ilia.png" alt="Ilia">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Development Manager</div>
                                     <div class="responsive-3">Ilia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
@@ -315,7 +318,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="member">
-                                <img class="member-body profile-pic" src="/images/people/zenja.png" alt="">
+                                <img class="member-body profile-pic" src="/images/people/zenja.png" alt="Zenja">
                                 <div class="member-body">
                                     <div class="bluetext responsive-4">Mood Manager</div>
                                     <div class="responsive-3">Zenja <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></div>
