--- a/views/posts/post4.ejs
+++ b/views/posts/post4.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The impact of social media on mental health</title>
+    <title>The impact of social media on mental health | Youth United</title>
     <link rel="icon" href="/images/logo.jpg">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
