--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 <body>
     <nav id="navbar" class="fixed-top navbarcontent d-flex flex-column justify-content-center">
         <div class="container d-flex mx-auto justify-content-around">
-            <a href="#articles" class="whitetext">Recent Articles</a>
+            <a href="#articles" class="whitetext">Our Work</a>
             <a href="#history" class="whitetext">History</a>
             <a href="#future" class="whitetext">Our Future</a>
             <a href="#team" class="whitetext">The Team</a>
@@ -48,7 +48,8 @@
         <div class="container">
             <div id="articles">
                 <div class="filler"></div>
-                <div class="bluetext display-2 mb-3">Recent Articles</div>
+                <div class="bluetext display-2">Our Work</div>
+                <h3 class="mb-4">These are some of the articles made by our writers.</h3>
                 <a href="posts/post1">
                     <div class="post">
                         <h2>The liquidation of the Belarussian Youth European Parliament</h2>
